Basic layout of new website

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,55 +2,73 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../../../favicon.ico">
+<meta name="author" content="Harry Peach">
+<title>Harry Peach</title>
 
-<title>Cover Template for Bootstrap</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY="
+    crossorigin="anonymous" />
 
-<!-- Custom styles for this template -->
-<link href="cover.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="assets/css/cssreset.css">
+<link rel="stylesheet" type="text/css" href="assets/css/core.css">
 
-
-<div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto">
-        <!-- <div class="inner">
-            <h3 class="masthead-brand">Cover</h3>
-            <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Contact</a>
-            </nav>
-        </div> -->
-    </header>
-
-    <main role="main" class="inner cover">
-        <h1 class="cover-heading">Coming soon</h1>
-        <p class="lead">₿: 1GNTLxgRwVwWtFwejJ3dy1qdYebpVqqvUy</p>
-        <!-- <p class="lead">
-            <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p> -->
-    </main>
-
-    <footer class="mastfoot mt-auto">
-        <div class="inner" style="font-size: 8px; opacity: 0.1;">
-            <p>Cover template for
-                <a href="https://getbootstrap.com/">Bootstrap</a>, by
-                <a href="https://twitter.com/mdo">@mdo</a>.</p>
+<section class="titlebar">
+    <div class="container">
+        <div class="row">
+            <div class="titlelink three columns">
+                <a href="#">Home</a>
+            </div>
+            <div class="titlelink three columns">
+                <a href="#">Projects</a>
+            </div>
+            <div class="titlelink three columns">
+                <a href="#">Skills</a>
+            </div>
+            <div class="titlelink three columns">
+                <a href="#">Qualifications</a>
+            </div>
         </div>
-    </footer>
-</div>
+    </div>
+</section>
 
+<section class="header">
+    <div class="vertical-align">
+        <h1 id="h1">Harry Peach</h1>
+        <p id="subtitle">Velit dolor Lorem eiusmod duis duis occaecat pariatur aliquip.</p>
+    </div>
+</section>
 
-<!-- Bootstrap core JavaScript
-    ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+<section class="panel">
+    <div class="row">
+        <h1 id="panel-title">Projects</h1>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+    </div>
+</section>
+
+<section class="panel">
+
+</section>
