Minimal changes and inclusion of a footer

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,19 +15,19 @@
 
 <section class="titlebar">
     <div class="container">
-        <div class="row">
-            <div class="titlelink three columns">
-                <a href="#">Home</a>
-            </div>
-            <div class="titlelink three columns">
-                <a href="#">Projects</a>
-            </div>
-            <div class="titlelink three columns">
-                <a href="#">Skills</a>
-            </div>
-            <div class="titlelink three columns">
-                <a href="#">Qualifications</a>
-            </div>
+            <div class="row">
+                <div class="titlelink three columns">
+                    <a href="#">Home</a>
+                </div>
+                <div class="titlelink three columns">
+                    <a href="#">Projects</a>
+                </div>
+                <div class="titlelink three columns">
+                    <a href="#">Skills</a>
+                </div>
+                <div class="titlelink three columns">
+                    <a href="#">Qualifications</a>
+                </div>
         </div>
     </div>
 </section>
@@ -69,6 +69,66 @@
     </div>
 </section>
 
-<section class="panel">
+<section class="panel inverse">
+    <div class="row">
+        <h1 id="panel-title">Skills</h1>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+    </div>
+</section>
 
+<section class="panel">
+    <div class="row">
+        <h1 id="panel-title">Qualifications</h1>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+        <div class="six columns">
+            <br id="br">
+            <h2 id="h2">Skye Assistant</h2>
+            <br>
+            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+        </div>
+        <div class="five columns">
+            <br id="br">
+            <h2 id="h2">Python Web Server</h2>
+            <br>
+            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+        </div>
+    </div>
+</section>
+
+<section class="footer">
+    Copyright &copy; Harry Peach 2018
 </section>
