Filled out projects section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -42,29 +42,33 @@
 <section class="panel">
     <div class="row">
         <h1 id="panel-title">Projects</h1>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Built using Python 3 and PHP.</p><br>
+            <p id="sub">GitHub: Private Repository</p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
-            <h2 id="h2">Python Web Server</h2>
+            <h2 id="h2">Marvelous</h2>
             <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+            <p>Fork of a markdown editor, adding Windows builds, UI changes, and bug fixes.</p><br>
+            <p id="sub">GitHub: <a href="https://github.com/HarryPeach/Marvelous">HarryPeach/Marvelous</a></p>
         </div>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
-            <h2 id="h2">Skye Assistant</h2>
+            <h2 id="h2">Ciph</h2>
             <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+            <p>Ciph generates high entropy passwords, based on the concept suggested from an xkcd comic.</p><br>
+            <p id="sub">Google Play: <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph">Ciph</a></p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
-            <h2 id="h2">Python Web Server</h2>
+            <h2 id="h2">Alternative Navbar</h2>
             <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+            <p>A theme from the Substratum Android theming engine, allowing you to change system navigation icons.</p><br>
+            <p id="sub">Google Play: <a href="https://play.google.com/store/apps/details?id=uk.co.harrypeach.navbar">Alternative Navbar</a></p>
         </div>
     </div>
 </section>
@@ -72,25 +76,25 @@
 <section class="panel inverse">
     <div class="row">
         <h1 id="panel-title">Skills</h1>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
             <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Python Web Server</h2>
             <br>
             <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
         </div>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
             <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Python Web Server</h2>
             <br>
@@ -102,25 +106,25 @@
 <section class="panel">
     <div class="row">
         <h1 id="panel-title">Qualifications</h1>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
             <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Python Web Server</h2>
             <br>
             <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
         </div>
-        <div class="six columns">
+        <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
             <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
         </div>
-        <div class="five columns">
+        <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Python Web Server</h2>
             <br>
@@ -129,6 +133,6 @@
     </div>
 </section>
 
-<section class="footer">
+<section class="footer" id="sub">
     Copyright &copy; Harry Peach 2018
 </section>
