Changed main color to pink

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,16 +17,16 @@
     <div class="container">
             <div class="row">
                 <div class="titlelink three columns">
-                    <a href="#">Home</a>
-                </div>
-                <div class="titlelink three columns">
                     <a href="#">Projects</a>
                 </div>
                 <div class="titlelink three columns">
                     <a href="#">Skills</a>
                 </div>
                 <div class="titlelink three columns">
-                    <a href="#">Qualifications</a>
+                    <a href="#">Awards</a>
+                </div>
+                <div class="titlelink three columns">
+                    <a href="#">Contact</a>
                 </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="panel">
+<section class="panel inverse">
     <div class="row">
         <h1 id="panel-title">Projects</h1>
         <div class="six columns padded">
@@ -47,7 +47,7 @@
             <h2 id="h2">Skye Assistant</h2>
             <br>
             <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Built using Python 3 and PHP.</p><br>
-            <p id="sub">GitHub: Private Repository</p>
+            <p id="sub">GitHub: Repo currently private</p>
         </div>
         <div class="five columns padded">
             <br id="br">
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section class="panel inverse">
+<section class="panel">
     <div class="row">
         <h1 id="panel-title">Skills</h1>
         <div class="six columns padded">
@@ -103,20 +103,22 @@
     </div>
 </section>
 
-<section class="panel">
+<section class="panel inverse">
     <div class="row">
-        <h1 id="panel-title">Qualifications</h1>
+        <h1 id="panel-title">Awards and Qualifications</h1>
         <div class="six columns padded">
             <br id="br">
-            <h2 id="h2">Skye Assistant</h2>
+            <h2 id="h2">CyberCenturion 2018</h2>
             <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+            <p>I took part in the CyberCenturion cyber security competition, and was part of the team that won Best Cast Team in the national finals.</p><br>
+            <p id="sub">More info: <a href="https://www.cybersecuritychallenge.org.uk/news-events/uks-best-young-cyber-talents-tackle-cyber-attacks-win-trip-us">CyberCenturion</a></p>
         </div>
         <div class="five columns padded">
             <br id="br">
-            <h2 id="h2">Python Web Server</h2>
+            <h2 id="h2">Extended Project Qualification</h2>
             <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+            <p>My EPQ, "Can biometrics keep the consumer safe from identity theft and fraud?", required me to create an extended essay and present to an audience on my chosen topic.</p><br>
+            <p id="sub">Grade: Pending</p>
         </div>
         <div class="six columns padded">
             <br id="br">
