Added click to change pastel background

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,7 +32,7 @@
     </div>
 </section>
 
-<section class="header">
+<section class="header" onclick="changeBackground()">
     <div class="vertical-align">
         <h1 id="h1">Harry Peach</h1>
         <p id="subtitle">Velit dolor Lorem eiusmod duis duis occaecat pariatur aliquip.</p>
@@ -120,21 +120,11 @@
             <p>My EPQ, "Can biometrics keep the consumer safe from identity theft and fraud?", required me to create an extended essay and present to an audience on my chosen topic.</p><br>
             <p id="sub">Grade: Pending</p>
         </div>
-        <div class="six columns padded">
-            <br id="br">
-            <h2 id="h2">Skye Assistant</h2>
-            <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
-        </div>
-        <div class="five columns padded">
-            <br id="br">
-            <h2 id="h2">Python Web Server</h2>
-            <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
-        </div>
     </div>
 </section>
 
 <section class="footer" id="sub">
     Copyright &copy; Harry Peach 2018
 </section>
+
+<script src="assets/js/pickbackground.js"></script>
