--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,72 +9,84 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha256-2YQRJMXD7pIAPHiXr0s+vlRWA7GYJEK0ARns7k2sbHY="
     crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0="
+    crossorigin="anonymous" />
 
 <link rel="stylesheet" type="text/css" href="assets/css/cssreset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
 
 <section class="titlebar">
     <div class="container">
-            <div class="row">
-                <div class="titlelink three columns">
-                    <a href="#">Projects</a>
-                </div>
-                <div class="titlelink three columns">
-                    <a href="#">Skills</a>
-                </div>
-                <div class="titlelink three columns">
-                    <a href="#">Awards</a>
-                </div>
-                <div class="titlelink three columns">
-                    <a href="#">Contact</a>
-                </div>
+        <div class="row">
+            <div class="titlelink three columns animated fadeInDown">
+                <a href="#">Projects</a>
+            </div>
+            <div class="titlelink three columns animated fadeInDown">
+                <a href="#">Skills</a>
+            </div>
+            <div class="titlelink three columns animated fadeInDown">
+                <a href="#">Awards</a>
+            </div>
+            <div class="titlelink three columns animated fadeInDown">
+                <a href="#">Contact</a>
+            </div>
         </div>
     </div>
 </section>
 
 <section class="header" onclick="changeBackground()">
     <div class="vertical-align">
-        <h1 id="h1">Harry Peach</h1>
-        <p id="subtitle">Velit dolor Lorem eiusmod duis duis occaecat pariatur aliquip.</p>
+        <h1 id="h1" class="animated fadeInUp">Harry Peach</h1>
+        <p id="subtitle" class="animated fadeInUp">Velit dolor Lorem eiusmod duis duis occaecat pariatur aliquip.</p>
     </div>
 </section>
 
 <section class="panel inverse">
-    <div class="row">
+    <div class="row animated fadeIn">
         <h1 id="panel-title">Projects</h1>
         <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
-            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Built using Python 3 and PHP.</p><br>
+            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Built using Python 3 and PHP.</p>
+            <br>
             <p id="sub">GitHub: Repo currently private</p>
         </div>
         <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Marvelous</h2>
             <br>
-            <p>Fork of a markdown editor, adding Windows builds, UI changes, and bug fixes.</p><br>
-            <p id="sub">GitHub: <a href="https://github.com/HarryPeach/Marvelous">HarryPeach/Marvelous</a></p>
+            <p>Fork of a markdown editor, adding Windows builds, UI changes, and bug fixes.</p>
+            <br>
+            <p id="sub">GitHub:
+                <a href="https://github.com/HarryPeach/Marvelous">HarryPeach/Marvelous</a>
+            </p>
         </div>
         <div class="six columns padded">
             <br id="br">
             <h2 id="h2">Ciph</h2>
             <br>
-            <p>Ciph generates high entropy passwords, based on the concept suggested from an xkcd comic.</p><br>
-            <p id="sub">Google Play: <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph">Ciph</a></p>
+            <p>Ciph generates high entropy passwords, based on the concept suggested from an xkcd comic.</p>
+            <br>
+            <p id="sub">Google Play:
+                <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph">Ciph</a>
+            </p>
         </div>
         <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Alternative Navbar</h2>
             <br>
-            <p>A theme from the Substratum Android theming engine, allowing you to change system navigation icons.</p><br>
-            <p id="sub">Google Play: <a href="https://play.google.com/store/apps/details?id=uk.co.harrypeach.navbar">Alternative Navbar</a></p>
+            <p>A theme from the Substratum Android theming engine, allowing you to change system navigation icons.</p>
+            <br>
+            <p id="sub">Google Play:
+                <a href="https://play.google.com/store/apps/details?id=uk.co.harrypeach.navbar">Alternative Navbar</a>
+            </p>
         </div>
     </div>
 </section>
 
 <section class="panel">
-    <div class="row">
+    <div class="row animated fadeIn">
         <h1 id="panel-title">Skills</h1>
         <div class="six columns padded">
             <br id="br">
@@ -104,20 +116,26 @@
 </section>
 
 <section class="panel inverse">
-    <div class="row">
+    <div class="row animated fadeIn">
         <h1 id="panel-title">Awards and Qualifications</h1>
         <div class="six columns padded">
             <br id="br">
             <h2 id="h2">CyberCenturion 2018</h2>
             <br>
-            <p>I took part in the CyberCenturion cyber security competition, and was part of the team that won Best Cast Team in the national finals.</p><br>
-            <p id="sub">More info: <a href="https://www.cybersecuritychallenge.org.uk/news-events/uks-best-young-cyber-talents-tackle-cyber-attacks-win-trip-us">CyberCenturion</a></p>
+            <p>I took part in the CyberCenturion cyber security competition, and was part of the team that won Best Cast Team
+                in the national finals.</p>
+            <br>
+            <p id="sub">More info:
+                <a href="https://www.cybersecuritychallenge.org.uk/news-events/uks-best-young-cyber-talents-tackle-cyber-attacks-win-trip-us">CyberCenturion</a>
+            </p>
         </div>
         <div class="five columns padded">
             <br id="br">
             <h2 id="h2">Extended Project Qualification</h2>
             <br>
-            <p>My EPQ, "Can biometrics keep the consumer safe from identity theft and fraud?", required me to create an extended essay and present to an audience on my chosen topic.</p><br>
+            <p>My EPQ, "Can biometrics keep the consumer safe from identity theft and fraud?", required me to create an extended
+                essay and present to an audience on my chosen topic.</p>
+            <br>
             <p id="sub">Grade: Pending</p>
         </div>
     </div>
