Fixed text being selected when clicking the header

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,7 +34,7 @@
     </div>
 </section>
 
-<section class="header" onclick="changeBackground()">
+<section class="header unselectable" onclick="changeBackground()">
     <div class="vertical-align">
         <h1 id="h1" class="animated fadeInUp">Harry Peach</h1>
         <p id="subtitle" class="animated fadeInUp">Velit dolor Lorem eiusmod duis duis occaecat pariatur aliquip.</p>
