Added extra info to all sections of the index

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -48,7 +48,7 @@
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
-            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Built using Python 3 and PHP.</p>
+            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Dynamically loads and runs user-addons. Built using Python 3 and PHP.</p>
             <br>
             <p id="sub">GitHub: Repo currently private</p>
         </div>
@@ -56,7 +56,7 @@
             <br id="br">
             <h2 id="h2">Marvelous</h2>
             <br>
-            <p>Fork of a markdown editor, adding Windows builds, UI changes, and bug fixes.</p>
+            <p>Fork of a markdown editor. I added Windows builds, UI changes, and bug fixes.</p>
             <br>
             <p id="sub">GitHub:
                 <a href="https://github.com/HarryPeach/Marvelous">HarryPeach/Marvelous</a>
@@ -66,7 +66,7 @@
             <br id="br">
             <h2 id="h2">Ciph</h2>
             <br>
-            <p>Ciph generates high entropy passwords, based on the concept suggested from an xkcd comic.</p>
+            <p>A generator for high entropy passwords, based on the concept suggested from an xkcd comic.</p>
             <br>
             <p id="sub">Google Play:
                 <a href="https://play.google.com/store/apps/details?id=ga.cphn.ciph">Ciph</a>
@@ -90,15 +90,15 @@
         <h1 id="panel-title">Skills</h1>
         <div class="six columns padded">
             <br id="br">
-            <h2 id="h2">Skye Assistant</h2>
+            <h2 id="h2">Programming</h2>
             <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
+            <p>Comfortable creating programs in Java, Python, and C Sharp, as well as creating projects in HTML and CSS.</p>
         </div>
         <div class="five columns padded">
             <br id="br">
-            <h2 id="h2">Python Web Server</h2>
+            <h2 id="h2">Product Testing</h2>
             <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
+            <p>Have tested and provided feedback for companies such as NowTV, Avira, GoPro, Snap Inc, and more.</p>
         </div>
         <div class="six columns padded">
             <br id="br">
@@ -122,8 +122,7 @@
             <br id="br">
             <h2 id="h2">CyberCenturion 2018</h2>
             <br>
-            <p>I took part in the CyberCenturion cyber security competition, and was part of the team that won Best Cast Team
-                in the national finals.</p>
+            <p>I led a team for the CyberCenturion cyber security competition. We made it to the national finals and won the award for best cadet team.</p>
             <br>
             <p id="sub">More info:
                 <a href="https://www.cybersecuritychallenge.org.uk/news-events/uks-best-young-cyber-talents-tackle-cyber-attacks-win-trip-us">CyberCenturion</a>
