Added a small contact form

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -48,7 +48,8 @@
             <br id="br">
             <h2 id="h2">Skye Assistant</h2>
             <br>
-            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Dynamically loads and runs user-addons. Built using Python 3 and PHP.</p>
+            <p>An open-source, extensible, virtual assistant for the Raspberry Pi. Dynamically loads and runs user-addons. Built
+                using Python 3 and PHP.</p>
             <br>
             <p id="sub">GitHub: Repo currently private</p>
         </div>
@@ -100,18 +101,8 @@
             <br>
             <p>Have tested and provided feedback for companies such as NowTV, Avira, GoPro, Snap Inc, and more.</p>
         </div>
-        <div class="six columns padded">
-            <br id="br">
-            <h2 id="h2">Skye Assistant</h2>
-            <br>
-            <p>Non ut id pariatur officia officia velit consequat aliquip quis commodo amet.</p>
-        </div>
-        <div class="five columns padded">
-            <br id="br">
-            <h2 id="h2">Python Web Server</h2>
-            <br>
-            <p>Laboris laboris adipisicing aliqua enim voluptate minim sit reprehenderit exercitation aute.</p>
-        </div>
+        <!-- Think of some more skills -->
+        <!-- eg. Hardware, Microsoft Suite, etc. -->
     </div>
 </section>
 
@@ -122,7 +113,8 @@
             <br id="br">
             <h2 id="h2">CyberCenturion 2018</h2>
             <br>
-            <p>I led a team for the CyberCenturion cyber security competition. We made it to the national finals and won the award for best cadet team.</p>
+            <p>I led a team for the CyberCenturion cyber security competition. We made it to the national finals and won the
+                award for best cadet team.</p>
             <br>
             <p id="sub">More info:
                 <a href="https://www.cybersecuritychallenge.org.uk/news-events/uks-best-young-cyber-talents-tackle-cyber-attacks-win-trip-us">CyberCenturion</a>
@@ -136,6 +128,20 @@
                 essay and present to an audience on my chosen topic.</p>
             <br>
             <p id="sub">Grade: Pending</p>
+        </div>
+    </div>
+</section>
+
+<section class="panel">
+    <div class="row animated fadeIn">
+        <h1 id="panel-title">Contact</h1>
+        <div class="2 columns padded">
+            <form action="action_page.php" class="contact-form">
+                <input type="text" name="name" placeholder="Your name">
+                <input type="text" name="email" placeholder="Your email">
+                <textarea name="subject" placeholder="Your message" style="height:200px"></textarea>
+                <input type="submit" value="Submit">
+            </form>
         </div>
     </div>
 </section>
