Added currently unfunctional additional projects link

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -83,6 +83,10 @@
                 <a href="https://play.google.com/store/apps/details?id=uk.co.harrypeach.navbar">Alternative Navbar</a>
             </p>
         </div>
+        <div class="12 columns padded">
+            <br id="br">
+            <p>More of my projects are available here: <a href="#">Additional Projects</a></p>
+        </div>
     </div>
 </section>
 
