--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@ class Home extends React.Component {
         return (
             <div>
                 <h1>hey.</h1>
-                <p>Voluptate eu reprehenderit deserunt laborum non aute occaecat incididunt.</p>
+                <p>Welcome to the preview of my website. Some features may not be functional yet, but feel free to look around.</p>
             </div>
         )
     }
@@ -51,11 +51,11 @@ class Login extends React.Component {
             <div>
                 <h1>login.</h1>
                 <form id="login-form" action="" method="post">
-                    <input type="text" placeholder="Username" name="username" required />
+                    <input type="text" placeholder="Username" name="username" class="login-input-text" required />
                     <br />
-                    <input type="password" placeholder="Password" name="password" required />
+                    <input type="password" placeholder="Password" name="password" class="login-input-text" required />
                     <br />
-                    <button type="submit">Login</button>
+                    <button type="submit" class="login-input-button">Log in</button>
                 </form>
             </div>
         )
