Added to-do list

--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,9 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <span id="footer-contact-text">contact@harrypeach.co.uk</span>
+</div>
 <script type="text/babel">
 class Home extends React.Component {
     render() {
