--- a/html/index.html
+++ b/html/index.html
@@ -9,13 +9,26 @@
 <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
 <link rel="stylesheet" type="text/css" href="assets/css/skeleton.css">
 <link rel="stylesheet" type="text/css" href="assets/css/core.css">
+<link rel="stylesheet" id="theme" href="assets/css/overlays/default.css">
 <link rel="manifest" href="assets/pwa/manifest.json">
 
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 
-<div class="container center-vertical" onload="renderHome()">
+<div id="modal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Settings</h2>
+        <p>Some text in the Modal..</p>
+    </div>
+</div>
+
+<img src="assets/svg/settings.svg" id="modal-settings-icon">
+
+<div class="container center-vertical">
     <div class="row">
         <div class="eight columns" id="root"></div>
     </div>
@@ -110,3 +123,4 @@ function renderRoot(item) {
 <script type="text/babel">
     window.onload = renderRoot(0);
 </script>
+<script src="assets/js/modal.js"></script>
